add link to github

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 target="_blank"
                 >Frontend Mentor</a
             >. Coded by
-            <a href="https://github.com/thomas-matuszewski"
+            <a href="https://github.com/thomas-matuszewski" target="_blank"
                 >Tomasz Matuszewski</a
             >.
         </div>
